[package]
name = "tc2vv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "^2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11.14", features = ["json"]}
tokio = { version = "1.19.2", features = [ "full" ] }
tokio-tungstenite = {version = "*", features = [ "native-tls-vendored" ]}
futures-util = "*"
regex = "^1.3.4"
futures-channel = "*"
